<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>base_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2522082924@qq.com">action</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!--  -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <!-- srv,msg文件依赖 -->
  <!-- 编译依赖 -->
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- 执行依赖 -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- action文件依赖 -->
  <depend>action_msgs</depend>

  <!-- 声明当前包所属的功能包组 -->
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
